@@ -1,3 +1,5 @@
+  - disable extra tests on perls <= 5.008003, things do not work there as
+    expected
 1.002002 - 2011-02-25
   - only try and mkdir the .git if it doesn't already exist so repeated
     test runs don't explode
